--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/fragments/navbar.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/fragments/navbar.html
@@ -27,7 +27,10 @@
                     <a class="nav-link" href="/contacts">Contacts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/attribs">Attribute values</a>
+                    <a class="nav-link" href="/attribs">Attributes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/values">Values</a>
                 </li>
             </ul>
         </div>
