--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/queryForm.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/queryForm.html
@@ -10,20 +10,30 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-<div id="queryForm">
+<div id="installQueryForm">
+    <h2 class="display-7">Install query</h2>
     <form action="#" th:action="@{/query}" th:object="${queryObject}" method="post">
         <div class="form-group">
-            <label for="QueryName1">Enter query name</label>
-            <input type="text" class="form-control" id="QueryName1" rows="3" th:field="*{name}"/>
+            <label for="InstallQueryName1">Enter query name</label>
+            <input type="text" class="form-control" id="InstallQueryName1" rows="3" th:field="*{name}"/>
         </div>
         <div class="form-group">
-            <label for="Textarea1">Enter query</label>
-            <textarea class="form-control" id="Textarea1" rows="3" th:field="*{value}"></textarea>
+            <label for="InstallTextarea1">Enter query</label>
+            <textarea class="form-control" id="InstallTextarea1" rows="3" th:field="*{value}"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
 
-    <div id="response"><p th:text="${responseText}"/></div>
+<div id="uninstallQueryForm">
+    <h2 class="display-7">Uninstall query</h2>
+    <form action="#" th:action="@{/query}" th:object="${queryObject}" method="post">
+        <div class="form-group">
+            <label for="UninstallQueryName1">Enter query name</label>
+            <input type="text" class="form-control" id="UninstallQueryName1" rows="3" th:field="*{name}"/>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
