--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -34,6 +34,18 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
+<div id="zoneAttribForm">
+    <form action="#" th:action="@{/values}" th:object="${zoneName}" method="post">
+        <div class="form-group">
+            <label for="ZoneName1">Enter zone name to get attribute values</label>
+            <input type="text" class="form-control" id="ZoneName1" rows="3" th:field="*{string}"/>
+            <small id="passwordHelpBlock" class="form-text text-muted" th:text="${availableZones}">
+            </small>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+
 <div id="chart_div" style="width: 100%; height: 500px;"></div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
