--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript">
+        google.charts.load('current', {'packages':['table']});
         google.charts.load('current', {'packages':['corechart']});
         google.charts.setOnLoadCallback(refreshChart());
 
@@ -17,6 +18,9 @@
         }
 
         function getData(){
+            $.getJSON("/attribAllValues", function(data, status){
+                drawTable(data)
+            });
             $.getJSON("/attribNumValues", function(data, status){
                 drawChart(data)
             });
@@ -35,6 +39,20 @@
             var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
             chart.draw(data, options);
         }
+
+        function drawTable(jsonData) {
+            var data = new google.visualization.DataTable();
+            for (let col of jsonData[0]) {
+                data.addColumn('string', col);
+            }
+            jsonData.shift();
+            data.addRows(jsonData);
+
+            var table = new google.visualization.Table(document.getElementById('table_div'));
+
+            table.draw(data, {width: '100%', height: '100%'});
+        }
+
     </script>
 </head>
 
@@ -53,6 +71,7 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
+<div id="table_div"></div>
 <div id="chart_div" style="width: 100%; height: 500px;"></div>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
