Remove duration input as string and fix attribute helper messages

--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribForm.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribForm.html
@@ -47,9 +47,8 @@
             <small id="attributeValueHelpBlock" class="form-text text-muted">
                 Use Json list for complex types and stick to proper format in duration and time. <br> Examples: <br>
                 Time: 3600 <br>
-                Duration (version 1): 3600 <br>
-                Duration (version 2): +0 00:00:00.001 <br>
-                Contact: { "contactName" : [ 1, 1, 1, 1 ] } <br>
+                Duration: 3600 <br>
+                Contact: { "/contactName" : [ 1, 1, 1, 1 ] } <br>
                 Query: { "&queryName" : "query" } <br>
                 List: [ 1, 2, 3 ] <br>
                 Set: [ [1, 2], [3, 4], [5, 6] ] <br>
