--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/contactsForm.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/contactsForm.html
@@ -17,8 +17,8 @@
             <textarea class="form-control" id="Textarea1" rows="3" th:field="*{string}"></textarea>
             <small id="attributeValueHelpBlock" class="form-text text-muted">
                 Use Json format for entering contacts. Examples: <br>
-                Contact: { "contactName" : [ 1, 1, 1, 1 ] } <br>
-                Contact: { "contactName1" : [ 1, 1, 1, 1 ], "contactName2" : [ 2, 2, 2, 2 ]  }
+                Contact: { "/contactName" : [ 1, 1, 1, 1 ] } <br>
+                Contact: { "/contactName1" : [ 1, 1, 1, 1 ], "/contactName2" : [ 2, 2, 2, 2 ]  }
             </small>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
