Keep one row of attributes table

--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -47,7 +47,7 @@
                 data.addColumn('string', col);
             }
             jsonData.shift();
-            data.addRows(jsonData);
+            data.addRow(jsonData[0]);
 
             var table = new google.visualization.Table(document.getElementById('table_div'));
 
