--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -120,7 +120,7 @@
 <div id="zoneAttribForm">
     <form action="#" th:action="@{/values}" th:object="${zoneName}" method="post">
         <div class="form-group">
-            <label for="ZoneName1">Enter zone name to get attribute values</label>
+            <label for="ZoneName1">Change zone name</label>
             <input type="text" class="form-control" id="ZoneName1" rows="3" th:field="*{string}"/>
             <small id="passwordHelpBlock" class="form-text text-muted" th:text="${availableZones}">
             </small>
@@ -128,13 +128,12 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-<!--<div id="chart_div" style="width: 100%; height: 500px;"></div>-->
+
 <div id="programmatic_dashboard_div">
     <div id="programmatic_control_div"></div>
     <div id="programmatic_chart_div"></div>
 </div>
 <div id="table_div"></div>
-
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
