Make frontend pretty

--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -6,8 +6,6 @@
     <title>Attributes chart</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart', 'table', 'controls', 'charteditor']});
         google.charts.setOnLoadCallback(refreshChart());
@@ -45,7 +43,7 @@
             }
 
             var options = {
-                title: 'Attribute values',
+                width : '70%',
                 hAxis: {title: 'Timestamp',  titleTextStyle: {color: '#333'}},
                 interpolateNulls: true,
                 crosshair: {trigger: 'both', orientation: 'vertical'}
@@ -65,9 +63,9 @@
                 options: {
                     filterColumnLabel: 'colLabel',
                     ui : {
-                        label : 'Columns',
+                        label : 'Attribute',
                         allowTyping : false,
-                        allowMultiple : true,
+                        allowMultiple : false,
                         allowNone : false,
                         selectedValuesLayout : 'below',
                         cssClass : 'google-visualization-controls-categoryfilter'
@@ -107,7 +105,7 @@
 
             var table = new google.visualization.Table(document.getElementById('table_div'));
 
-            table.draw(data, {width: '100%', height: '100%'});
+            table.draw(data, {width: '80%', height: '100%'});
         }
 
     </script>
@@ -116,8 +114,9 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-<h4 th:text="${currentZone}"></h4>
-<div id="zoneAttribForm">
+
+<h4 th:text="${currentZone}" class="d-flex justify-content-center mt-2"></h4>
+<div id="zoneAttribForm" class="d-flex justify-content-center mt-2">
     <form action="#" th:action="@{/values}" th:object="${zoneName}" method="post">
         <div class="form-group">
             <label for="ZoneName1">Change zone name</label>
@@ -129,13 +128,16 @@
     </form>
 </div>
 
-<div id="programmatic_dashboard_div">
-    <div id="programmatic_control_div"></div>
-    <div id="programmatic_chart_div"></div>
+<div id="programmatic_dashboard_div" class="d-flex flex-column justify-content-center mt-5">
+    <h4 class="d-flex justify-content-center mt-2">Attribute values</h4>
+    <div id="programmatic_control_div" class="d-flex justify-content-center mt-3"></div>
+    <div id="programmatic_chart_div" class="d-flex justify-content-center mt-1"></div>
+    <div id="table_div" class="d-flex justify-content-center mt-5"></div>
 </div>
-<div id="table_div"></div>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </body>
 
