--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribForm.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribForm.html
@@ -10,7 +10,9 @@
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
-<div id="queryForm">
+
+<h4 class="d-flex justify-content-center mt-2">Add attributes</h4>
+<div id="queryForm" class="d-flex justify-content-center mt-2">
     <form action="#" th:action="@{/attribs}" th:object="${attributeObject}" method="post">
         <div class="form-group">
             <label for="ZoneName1">Enter zone name</label>
@@ -49,7 +51,6 @@
                 Time: 3600 <br>
                 Duration: 3600 <br>
                 Contact: { "/contactName" : [ 1, 1, 1, 1 ] } <br>
-                Query: { "&queryName" : "query" } <br>
                 List: [ 1, 2, 3 ] <br>
                 Set: [ [1, 2], [3, 4], [5, 6] ] <br>
             </small>
