Add some prefetching and curses to load js quicker

--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Attributes chart</title>
+    <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" as="script">
+    <link rel="preload" href="https://www.gstatic.com/charts/loader.js" as="script">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script async type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script async type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart', 'table', 'controls', 'charteditor']});
         google.charts.setOnLoadCallback(refreshChart());
@@ -13,6 +16,8 @@
         var chartState = [];
 
         function refreshChart() {
+            setTimeout(getData(), 500);
+            setTimeout(getData(), 1500);
             setInterval(getData, 5000);
         }
 
@@ -101,7 +106,7 @@
                 data.addColumn('string', col);
             }
             jsonData.shift();
-            data.addRow(jsonData[0]);
+            data.addRow(jsonData[jsonData.length - 1]);
 
             var table = new google.visualization.Table(document.getElementById('table_div'));
 
@@ -135,7 +140,6 @@
     <div id="table_div" class="d-flex justify-content-center mt-5"></div>
 </div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
