Fix that goddamn js loading

--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -7,17 +7,16 @@
     <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" as="script">
     <link rel="preload" href="https://www.gstatic.com/charts/loader.js" as="script">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script async type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script async type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script async defer type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart', 'table', 'controls', 'charteditor']});
-        google.charts.setOnLoadCallback(refreshChart());
+        google.charts.setOnLoadCallback(refreshChart);
 
         var chartState = [];
 
         function refreshChart() {
-            setTimeout(getData(), 500);
-            setTimeout(getData(), 1500);
+            getData();
             setInterval(getData, 5000);
         }
 
