--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/attribChart.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Attributes chart</title>
-    <link rel="preload" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" as="script">
-    <link rel="preload" href="https://www.gstatic.com/charts/loader.js" as="script">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script async defer type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages':['corechart', 'table', 'controls', 'charteditor']});
@@ -119,20 +117,7 @@
 
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<h4 th:text="${currentZone}" class="d-flex justify-content-center mt-2"></h4>
-<div id="zoneAttribForm" class="d-flex justify-content-center mt-2">
-    <form action="#" th:action="@{/values}" th:object="${zoneName}" method="post">
-        <div class="form-group">
-            <label for="ZoneName1">Change zone name</label>
-            <input type="text" class="form-control" id="ZoneName1" rows="3" th:field="*{string}"/>
-            <small id="passwordHelpBlock" class="form-text text-muted" th:text="${availableZones}">
-            </small>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
-
-<div id="programmatic_dashboard_div" class="d-flex flex-column justify-content-center mt-5">
+<div id="programmatic_dashboard_div" class="d-flex flex-column justify-content-center">
     <h4 class="d-flex justify-content-center mt-2">Attribute values</h4>
     <div id="programmatic_control_div" class="d-flex justify-content-center mt-3"></div>
     <div id="programmatic_chart_div" class="d-flex justify-content-center mt-1"></div>
@@ -140,7 +125,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </body>
 
