--- a/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/fragments/navbar.html
+++ b/src/main/resources/pl/edu/mimuw/cloudatlas/client/templates/fragments/navbar.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/values">Values</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/zones">Zones</a>
+                </li>
             </ul>
         </div>
     </nav>
